# django-livraria

./: .gitignore  README.md  db.sqlite3  livraria.json  livraria_bkp.json  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_autor_options.py  0002_autor_editora_livro.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_livro_autores.py
core/models/: livro.py
core/serializers/: __init__.py  livro.py
core/views/: autor.py  categoria.py  editora.py  livro.py
livraria/: asgi.py  settings.py  urls.py  wsgi.py
uploader/: views.py
